now owner is included in participants table; update participants table;